--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # when running hexo in a subdirectory (e.g. domain.tld/blog), remove leading slashes ( "/archives" -> "archives" )
 menu:
   home: /
-  #categories: /categories
-  #about: /about
-  archives: /archives
+  categories: /categories
   tags: /tags
-  #commonweal: /404.html
+  archives: /archives
+  about: /about
+  # commonweal: /404.html
 
 # Place your favicon.ico to /source directory.
 favicon: /favicon.ico
@@ -21,19 +21,19 @@ rss:
 # Icon fonts
 # Place your font into next/source/fonts, specify directory-name and font-name here
 # Avialable: default | linecons | fifty-shades | feather
-icon_font: default
-#icon_font: fifty-shades
+#icon_font: default
+icon_font: fifty-shades
 #icon_font: feather
 #icon_font: linecons
 
 # Code Highlight theme
 # Available value: normal | night | night eighties | night blue | night bright
 # https://github.com/chriskempson/tomorrow-theme
-highlight_theme: normal
+highlight_theme: night
 
 
 # MathJax Support
-mathjax:
+mathjax: true
 
 
 # Schemes
@@ -91,3 +91,21 @@ images: images
 
 # Theme version
 version: 0.4.5.1
+
+# Logo images
+avatar: /images/logo.png
+
+# social
+social:
+  github: https://github.com/conanwhf
+  OSchina: https://git.oschina.net/conanwhf/
+  weibo: http://weibo.com/1864854042
+ # rss: /atom.xml
+  mailtoMe: mailto:conanwhf@gmail.com
+
+# 百度分享服务
+baidushare: true
+# 多说分享服务
+duoshuo_share: true
+# 多说热评文章 true 或者 false
+duoshuo_hotartical: true
