--- a/main_config.yml
+++ b/main_config.yml
@@ -92,17 +92,29 @@ marked:
   smartLists: true
   smartypants: true
 
+# 
+category_generator:
+  per_page: 10
+tag_generator:
+  per_page: 10
+
 # title, chinese available
 links_title: Links
 # links
 links:
   本站墙内链接: http://conanwhf.gitcafe.io
   本站墙外链接: http://conanwhf.github.io
-
+  开发者头条: http://toutiao.io
+  学习进度表: http://conanwhf.gitcafe.io/2015/09/06/学习路线/
+  慕课网: http://www.imooc.com/
+  经典斯坦福公开课: http://open.163.com/special/opencourse/ios8.html
 
 #插件，例如生成 RSS 和站点地图的
 plugins: 
 - hexo-generator-feed
 - hexo-generator-sitemap
+
+sitemap:
+  path: sitemap.xml
 
 since: 2015
