--- a/_config.yml
+++ b/_config.yml
@@ -97,11 +97,22 @@ avatar: /images/logo.png
 
 # social
 social:
-  github: https://github.com/conanwhf
+  Github: https://github.com/conanwhf
   OSchina: https://git.oschina.net/conanwhf/
-  weibo: http://weibo.com/1864854042
+  Weibo: http://weibo.com/1864854042
  # rss: /atom.xml
-  mailtoMe: mailto:conanwhf@gmail.com
+  MailtoMe: mailto:conanwhf@gmail.com
+
+# 搜索引擎&站点分析
+google_analytics: UA-68644901-1
+#(cafe)google_analytics: UA-68644901-2
+baidu_analytics: 99ff66396b2736a42a7744075ec7fa1c
+baidu_site_verification: HnBZtBD6xL
+#(hub)baidu_analytics: 
+#google_site_verification: XXXXXXXXXXXXXXXXXXXXXXX
+#(cafe)google_site_verification:
+swiftype_key: -wAdEzF15RczmAqPJh93
+#(hub)swiftype_key: K-tMCpYTHZY2mhvLxmuy
 
 # 百度分享服务
 baidushare: true
