--- a/main_config.yml
+++ b/main_config.yml
@@ -105,7 +105,7 @@ links:
   本站墙内链接: http://conanwhf.gitcafe.io
   本站墙外链接: http://conanwhf.github.io
   开发者头条: http://toutiao.io
-  学习进度表: http://conanwhf.gitcafe.io/2015/09/06/学习路线/
+  学习进度表: http://conanwhf.gitcafe.io/2015/09/06/RoadMap/
   慕课网: http://www.imooc.com/
   经典斯坦福公开课: http://open.163.com/special/opencourse/ios8.html
 
@@ -120,6 +120,23 @@ sitemap:
   path: sitemap.xml
 baidusitemap:
   path: baidusitemap.xml
+
+# 搜索引擎&站点分析
+google_analytics: UA-68644901-1
+#(cafe)google_analytics: UA-68644901-2
+baidu_analytics: 99ff66396b2736a42a7744075ec7fa1c
+baidu_site_verification: HnBZtBD6xL
+#(hub)baidu_analytics: 
+#google_site_verification: XXXXXXXXXXXXXXXXXXXXXXX
+#(cafe)google_site_verification:
+swiftype_key: -wAdEzF15RczmAqPJh93
+#(hub)swiftype_key: K-tMCpYTHZY2mhvLxmuy
+# 百度分享服务
+baidushare: true
+# 多说分享服务
+duoshuo_share: true
+# 多说热评文章 true 或者 false
+duoshuo_hotartical: true
 
 # Years
 since: 2015
