--- a/main_config.yml
+++ b/main_config.yml
@@ -36,7 +36,7 @@ filename_case: 0
 render_drafts: false
 post_asset_folder: false
 relative_link: false
-future: true
+future: false
 highlight:
   enable: true
   line_number: true
@@ -92,10 +92,16 @@ marked:
   smartLists: true
   smartypants: true
 
-# 
-category_generator:
-  per_page: 10
+# # number per page
+index_generator:
+  per_page: 5
+archive_generator:
+  per_page: 20
+  yearly: true
+  monthly: true
 tag_generator:
+  per_page: 10
+category_generator:
   per_page: 10
 
 # title, chinese available
@@ -104,10 +110,10 @@ links_title: Links
 links:
   本站墙内链接: http://conanwhf.gitcafe.io
   本站墙外链接: http://conanwhf.github.io
-  开发者头条: http://toutiao.io
+  我的资源收集: https://github.com/conanwhf/ResourceDoc
   学习进度表: http://conanwhf.gitcafe.io/2015/09/06/RoadMap/
   慕课网: http://www.imooc.com/
-  经典斯坦福公开课: http://open.163.com/special/opencourse/ios8.html
+  开发者头条: http://toutiao.io
 
 # 插件，例如生成 RSS 和站点地图的
 plugins: 
