--- a/main_config.yml
+++ b/main_config.yml
@@ -111,7 +111,7 @@ links:
   本站墙内链接: http://conanwhf.gitcafe.io
   本站墙外链接: http://conanwhf.github.io
   我的资源收集: https://github.com/conanwhf/ResourceDoc
-  学习进度表: http://conanwhf.gitcafe.io/2015/09/06/RoadMap/
+  学习进度表: http://conanwhf.github.io/2015/09/06/RoadMap/
   练手小项目清单: https://github.com/conanwhf/ResourceDoc/blob/master/tryList.md
   慕课网: http://www.imooc.com/
   开发者头条: http://toutiao.io
