--- a/main_config.yml
+++ b/main_config.yml
@@ -133,8 +133,7 @@ google_analytics: UA-68644901-1
 #(cafe)google_analytics: UA-68644901-2
 baidu_analytics: 99ff66396b2736a42a7744075ec7fa1c
 baidu_site_verification: HnBZtBD6xL
-#(hub)baidu_analytics: 
-#google_site_verification: XXXXXXXXXXXXXXXXXXXXXXX
+google_site_verification: fm7O971xqa-IgxCWIey5wM-1kAOR1sTDp_gZfHxonGc
 #(cafe)google_site_verification:
 swiftype_key: -wAdEzF15RczmAqPJh93
 #(hub)swiftype_key: K-tMCpYTHZY2mhvLxmuy
