--- a/main_config.yml
+++ b/main_config.yml
@@ -141,6 +141,7 @@ swiftype_key: -wAdEzF15RczmAqPJh93
 baidushare: true
 # 多说分享服务
 duoshuo_share: true
+duoshuo_shortname: conanwhfgithub
 # 多说热评文章 true 或者 false
 duoshuo_hotartical: true
 
