--- a/main_config.yml
+++ b/main_config.yml
@@ -12,10 +12,10 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-#url: http://yoursite.com
-#root: /
-#permalink: :year/:month/:day/:title/
-#permalink_defaults:
+url: http://conanwhf.gitcafe.io
+root: /
+permalink: :year/:month/:day/:title/
+permalink_defaults:
 
 # Directory
 source_dir: source
