--- a/main_config.yml
+++ b/main_config.yml
@@ -145,5 +145,20 @@ duoshuo_shortname: conanwhfgithub
 # 多说热评文章 true 或者 false
 duoshuo_hotartical: true
 
+
+# 防爬虫
+indicate_the_source:
+  enable: false
+  pattern: indicate-the-source
+  render_engine: ejs
+  element_class: source
+  domain_white_list:
+    - conanwhf.github.io
+    - conanwhf.gitcafe.io
+    - toutiao.io
+    - localhost
+  template: "<blockquote><p>你看到的是非授权版本！爬虫凶猛，请尊重知识产权！</p><p>转载请注明出处：<%- post.permalink %></p><p>访问原文「<a href='<%- post.permalink %>'><%- post.title %></a>」获取最佳阅读体验并参与讨论</p></blockquote>"
+
+
 # Years
 since: 2015
