--- a/main_config.yml
+++ b/main_config.yml
@@ -148,7 +148,7 @@ duoshuo_hotartical: true
 
 # 防爬虫
 indicate_the_source:
-  enable: false
+  enable: true
   pattern: indicate-the-source
   render_engine: ejs
   element_class: source
@@ -156,7 +156,7 @@ indicate_the_source:
     - conanwhf.github.io
     - conanwhf.gitcafe.io
     - toutiao.io
-    - localhost
+    - 0.0.0.0
   template: "<blockquote><p>你看到的是非授权版本！爬虫凶猛，请尊重知识产权！</p><p>转载请注明出处：<%- post.permalink %></p><p>访问原文「<a href='<%- post.permalink %>'><%- post.title %></a>」获取最佳阅读体验并参与讨论</p></blockquote>"
 
 
