--- a/_config.yml
+++ b/_config.yml
@@ -101,5 +101,5 @@ social:
   OSchina: https://git.oschina.net/conanwhf/
   Weibo: http://weibo.com/1864854042
  # rss: /atom.xml
-  MailtoMe: mailto:conanwhf@gmail.com
+  MailtoMe: mailto:conan.whf@gmail.com
 
