--- a/main_config.yml
+++ b/main_config.yml
@@ -138,12 +138,12 @@ google_site_verification: fm7O971xqa-IgxCWIey5wM-1kAOR1sTDp_gZfHxonGc
 swiftype_key: -wAdEzF15RczmAqPJh93
 #(hub)swiftype_key: K-tMCpYTHZY2mhvLxmuy
 # 百度分享服务
-baidushare: true
+#baidushare: true
 # 多说分享服务
-duoshuo_share: true
-duoshuo_shortname: conanwhfgithub
+#duoshuo_share: true
+#duoshuo_shortname: conanwhfgithub
 # 多说热评文章 true 或者 false
-duoshuo_hotartical: true
+#duoshuo_hotartical: true
 
 
 # 防爬虫
