--- a/main_config.yml
+++ b/main_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: iOS开发和七七八八
 subtitle: Conan学习笔记
-description: 入门iOS开发，相关不相关乱七八糟的一切
+description: 入门iOS开发、机器学习，Linux半吊子，相关不相关乱七八糟的一切
 author: Conan Wang
 language: zh-Hans
 timezone:
@@ -110,11 +110,11 @@ links_title: Links
 links:
   本站墙内链接: http://conanwhf.coding.me
   本站墙外链接: http://conanwhf.github.io
-  我的资源收集: https://github.com/conanwhf/ResourceDoc
-  学习进度表: http://conanwhf.github.io/2015/09/06/RoadMap/
-  练手小项目清单: https://github.com/conanwhf/ResourceDoc/blob/master/tryList.md
-  慕课网: http://www.imooc.com/
-  开发者头条: http://toutiao.io
+  我的iOS资源收集(Swift): https://github.com/conanwhf/ResourceDoc
+  #学习进度表: http://conanwhf.github.io/2015/09/06/RoadMap/
+  #练手小项目清单: https://github.com/conanwhf/ResourceDoc/blob/master/tryList.md
+  #慕课网: http://www.imooc.com/
+  #开发者头条: http://toutiao.io
 
 # 插件，例如生成 RSS 和站点地图的
 plugins: 
@@ -130,21 +130,13 @@ baidusitemap:
 
 # 搜索引擎&站点分析
 google_analytics: UA-68644901-1
-#(cafe)google_analytics: UA-68644901-2
 baidu_analytics: 8da63524978598168c3843bc8001d968
 baidu_site_verification: g1ag6ZODOB
 google_site_verification: fm7O971xqa-IgxCWIey5wM-1kAOR1sTDp_gZfHxonGc
-#(cafe)google_site_verification:
 swiftype_key: -wAdEzF15RczmAqPJh93
 #(hub)swiftype_key: K-tMCpYTHZY2mhvLxmuy
 # 百度分享服务
 #baidushare: true
-# 多说分享服务
-#duoshuo_share: true
-#duoshuo_shortname: conanwhfgithub
-# 多说热评文章 true 或者 false
-#duoshuo_hotartical: true
-
 
 # 防爬虫
 indicate_the_source:
@@ -158,7 +150,6 @@ indicate_the_source:
     - toutiao.io
     - 0.0.0.0
   template: "<blockquote><p>你看到的是非授权版本！爬虫凶猛，请尊重知识产权！</p><p>转载请注明出处：<%- post.permalink %></p><p>访问原文「<a href='<%- post.permalink %>'><%- post.title %></a>」获取最佳阅读体验并参与讨论</p></blockquote>"
-
 
 # Years
 since: 2015
