--- a/main_config.yml
+++ b/main_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: iOS开发和七七八八
+title: Linux开发和七七八八
 subtitle: Conan学习笔记
-description: 入门iOS开发、机器学习，Linux半吊子，相关不相关乱七八糟的一切
+description: Linux内核和系统半吊子，曾经的iOS开发者，入门机器学习和Python数据分析，相关不相关乱七八糟的一切
 author: Conan Wang
 language: zh-Hans
 timezone:
